--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "handlebars": "^4.7.6",
     "helmet": "^4.1.1",
+    "mongodb": "^3.6.2",
     "monk": "^7.3.2",
     "morgan": "^1.10.0",
     "nanoid": "^3.1.12",
