--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "helmet": "^4.1.1",
+    "mongoclient": "^1.0.3",
+    "mongodb": "^3.6.2",
+    "mongoose": "^5.10.4",
     "monk": "^7.3.2",
     "morgan": "^1.10.0",
     "nanoid": "^3.1.12",
